Update OpenAPI docs (#415)
This change marks as deprecated all endpoints directly under
`/registry/v0.1` in favor of "namespaced" ones under
`/registry/{registryName}/v0.1`.
